--- a/ui-code.html
+++ b/ui-code.html
@@ -537,6 +537,101 @@
                     </div>
                   </div>
 
+                  <!-- test section scroll 2 -->
+                  <div class="lgbgbb:grid-auto-rows--auto-min-content hfit lgbt:100vh bg-color--primary sticky grid pb-header-height--minus-1rem grid-auto-cols--minmax grid-auto-rows--minmax gap-one md:grid-col-1-5 lg:grid-col-1-5 lgta:grid-col-1-5 md:pt-s md:top-0 lg:pt-s lg:top-0 lgbgb:pt-none lgbgb:top-base lg:mb-minus-s">
+                    <div class="color-bg-grey--muted grid justify-items-center grid-auto-cols--minmax row-gap-s md:row-gap-m grid-col-1-3 lg:section--ui-padding lg:section--ui-column-gap">
+
+                      <div class="display-flex flex-column md:grid-col-1-2 md:grid-row-1 lg:grid-col-1-2 lg:grid-row-1 w100 h100 md:pt-m md:pr-m md:pl-m md:pb-m overflow-hiden" data-video="4">
+                        <div class="custom--ui-mockup border-top-right-left-s">
+                          <div class="custom--ui-mockup--dot--container">
+                            <span></span><span></span><span></span>
+                          </div>
+                        </div>
+                        <div class="">
+                          <img
+                           class=""
+                           srcset="assets/images/ui--nav--gfn-store-rewards--mob-1.jpg 640w, 
+                                  assets/images/ui--nav--gfn-store-rewards--mob-1.jpg 1080w"
+                           sizes="(max-width: 760px) 640px,
+                                 (max-width: 1360px) 1080px"
+                           src="assets/images/ui--nav--gfn-store-rewards--mob-1.jpg"
+                           alt="Good For Nothing Clothing Ltd. Campaign / Winter Shutdown / 2020 / Branding / Web Design / Layout / Concept"
+                           loading="lazy"
+                           width="1600"
+                           height="900"
+                          >
+                        </div>
+                        <div class="flex-grow-1 md:aspect-ratio-2-3 lg:aspect-ratio-9-16 overflow-y-scroll grid grid-auto-rows--min-content gap-one h100 w100">
+                          <img id=""
+                           class="grid-col-1-3 color-bg-grey--muted-3 height-auto"
+                           srcset="assets/images/ui--body--gfn-store-rewards--mob-1.jpg 640w, 
+                                  assets/images/ui--body--gfn-store-rewards--mob-1.jpg 1080w"
+                           sizes="(max-width: 760px) 640px,
+                                 (max-width: 1360px) 1080px"
+                           src="assets/images/ui--body--gfn-store-rewards--mob-1.jpg"
+                           alt="Good For Nothing Clothing Ltd. Campaign / Winter Shutdown / 2020 / Branding / Web Design / Layout / Concept"
+                           loading="lazy"
+                           width="1600"
+                           height="900"
+                          >
+                        </div>
+                      </div>
+
+                      <div class="display-flex flex-column md:grid-col-1-2 md:grid-row-2 lg:grid-col-2-5 lg:grid-row-1 w100 h100 md:pb-m md:pr-m md:pl-m overflow-hiden hide-on-mob">
+                        <div class="custom--ui-mockup border-top-right-left-s">
+                          <div class="custom--ui-mockup--dot--container">
+                            <span></span><span></span><span></span>
+                          </div>
+                        </div>
+                        <div class="">
+                          <img
+                           class=""
+                           srcset="assets/images/ui--nav--gfn-store-rewards--desk-1.jpg 640w, 
+                                  assets/images/ui--nav--gfn-store-rewards--desk-1.jpg 1080w"
+                           sizes="(max-width: 760px) 640px,
+                                 (max-width: 1360px) 1080px"
+                           src="assets/images/ui--nav--gfn-store-rewards--desk-1.jpg"
+                           alt="Good For Nothing Clothing Ltd. Campaign / Winter Shutdown / 2020 / Branding / Web Design / Layout / Concept"
+                           loading="lazy"
+                           width="1600"
+                           height="900"
+                          >
+                        </div>
+                        <div class="flex-grow-1 aspect-ratio-16-9 overflow-y-scroll grid grid-auto-rows--min-content gap-one h100 w100">
+                          <img id=""
+                           class="grid-col-1-3 color-bg-grey--muted-3 height-auto"
+                           srcset="assets/images/ui--body--gfn-store-rewards--desk-1.jpg 640w, 
+                                  assets/images/ui--body--gfn-store-rewards--desk-1.jpg 1080w"
+                           sizes="(max-width: 760px) 640px,
+                                 (max-width: 1360px) 1080px"
+                           src="assets/images/ui--body--gfn-store-rewards--desk-1.jpg"
+                           alt="Good For Nothing Clothing Ltd. Campaign / Winter Shutdown / 2020 / Branding / Web Design / Layout / Concept"
+                           loading="lazy"
+                           width="1600"
+                           height="900"
+                          >
+                        </div>
+                      </div>
+
+                    </div>
+
+                    <div class="parallax-content--img--text-container grid-col-1-3 grid-row-2">
+                      <div class="span-text-flex--inline-start grid-col-1-3 grid-row-1">
+                        <span class="span-text-flex--inline-start flex-start gap-none--important">
+                          <h3 class="line-height--standard-caps uppercase line-height--standard-caps md:text-sm">GOODFORNOTHING</h3>
+                          <sup class="text-sup line-height--standard-caps uppercase">Ⓡ</sup>
+                        </span>
+                      </div>
+                      <div class="span-text-flex--inline-start flex-end grid-col-1-3 grid-row-1">
+                        <span class="line-height--standard-caps uppercase md:text-sm">/</span>
+                        <p class="line-height--standard-caps md:text-sm">Shopify UI Design</p>
+                          <span class="line-height--standard-caps uppercase md:text-sm">/</span>
+                          <p class="line-height--standard-caps md:text-sm">Them: E-commerce</p>
+                      </div>
+                    </div>
+
+                  </div>
+
                   <!-- test section scroll 1 -->
                   <div class="lgbgbb:grid-auto-rows--auto-min-content hfit lgbt:100vh bg-color--primary sticky grid pb-header-height--minus-1rem grid-auto-cols--minmax grid-auto-rows--minmax gap-one md:grid-col-1-5 lg:grid-col-1-5 lgta:grid-col-1-5 md:pt-s md:top-0 lg:pt-s lg:top-0 lgbgb:pt-none lgbgb:top-base lg:mb-minus-s">
                     <div class="color-bg-grey--muted grid justify-items-center grid-auto-cols--minmax row-gap-s md:row-gap-m grid-col-1-3 lg:section--ui-padding lg:section--ui-column-gap">
@@ -632,101 +727,6 @@
 
                   </div>
 
-                  <!-- test section scroll 2 -->
-                  <div class="lgbgbb:grid-auto-rows--auto-min-content hfit lgbt:100vh bg-color--primary sticky grid pb-header-height--minus-1rem grid-auto-cols--minmax grid-auto-rows--minmax gap-one md:grid-col-1-5 lg:grid-col-1-5 lgta:grid-col-1-5 md:pt-s md:top-0 lg:pt-s lg:top-0 lgbgb:pt-none lgbgb:top-base lg:mb-minus-s">
-                    <div class="color-bg-grey--muted grid justify-items-center grid-auto-cols--minmax row-gap-s md:row-gap-m grid-col-1-3 lg:section--ui-padding lg:section--ui-column-gap">
-
-                      <div class="display-flex flex-column md:grid-col-1-2 md:grid-row-1 lg:grid-col-1-2 lg:grid-row-1 w100 h100 md:pt-m md:pr-m md:pl-m md:pb-m overflow-hiden" data-video="4">
-                        <div class="custom--ui-mockup border-top-right-left-s">
-                          <div class="custom--ui-mockup--dot--container">
-                            <span></span><span></span><span></span>
-                          </div>
-                        </div>
-                        <div class="">
-                          <img
-                           class=""
-                           srcset="assets/images/ui--nav--gfn-store-rewards--mob-1.jpg 640w, 
-                                  assets/images/ui--nav--gfn-store-rewards--mob-1.jpg 1080w"
-                           sizes="(max-width: 760px) 640px,
-                                 (max-width: 1360px) 1080px"
-                           src="assets/images/ui--nav--gfn-store-rewards--mob-1.jpg"
-                           alt="Good For Nothing Clothing Ltd. Campaign / Winter Shutdown / 2020 / Branding / Web Design / Layout / Concept"
-                           loading="lazy"
-                           width="1600"
-                           height="900"
-                          >
-                        </div>
-                        <div class="flex-grow-1 md:aspect-ratio-2-3 lg:aspect-ratio-9-16 overflow-y-scroll grid grid-auto-rows--min-content gap-one h100 w100">
-                          <img id=""
-                           class="grid-col-1-3 color-bg-grey--muted-3 height-auto"
-                           srcset="assets/images/ui--body--gfn-store-rewards--mob-1.jpg 640w, 
-                                  assets/images/ui--body--gfn-store-rewards--mob-1.jpg 1080w"
-                           sizes="(max-width: 760px) 640px,
-                                 (max-width: 1360px) 1080px"
-                           src="assets/images/ui--body--gfn-store-rewards--mob-1.jpg"
-                           alt="Good For Nothing Clothing Ltd. Campaign / Winter Shutdown / 2020 / Branding / Web Design / Layout / Concept"
-                           loading="lazy"
-                           width="1600"
-                           height="900"
-                          >
-                        </div>
-                      </div>
-
-                      <div class="display-flex flex-column md:grid-col-1-2 md:grid-row-2 lg:grid-col-2-5 lg:grid-row-1 w100 h100 md:pb-m md:pr-m md:pl-m overflow-hiden hide-on-mob">
-                        <div class="custom--ui-mockup border-top-right-left-s">
-                          <div class="custom--ui-mockup--dot--container">
-                            <span></span><span></span><span></span>
-                          </div>
-                        </div>
-                        <div class="">
-                          <img
-                           class=""
-                           srcset="assets/images/ui--nav--gfn-store-rewards--desk-1.jpg 640w, 
-                                  assets/images/ui--nav--gfn-store-rewards--desk-1.jpg 1080w"
-                           sizes="(max-width: 760px) 640px,
-                                 (max-width: 1360px) 1080px"
-                           src="assets/images/ui--nav--gfn-store-rewards--desk-1.jpg"
-                           alt="Good For Nothing Clothing Ltd. Campaign / Winter Shutdown / 2020 / Branding / Web Design / Layout / Concept"
-                           loading="lazy"
-                           width="1600"
-                           height="900"
-                          >
-                        </div>
-                        <div class="flex-grow-1 aspect-ratio-16-9 overflow-y-scroll grid grid-auto-rows--min-content gap-one h100 w100">
-                          <img id=""
-                           class="grid-col-1-3 color-bg-grey--muted-3 height-auto"
-                           srcset="assets/images/ui--body--gfn-store-rewards--desk-1.jpg 640w, 
-                                  assets/images/ui--body--gfn-store-rewards--desk-1.jpg 1080w"
-                           sizes="(max-width: 760px) 640px,
-                                 (max-width: 1360px) 1080px"
-                           src="assets/images/ui--body--gfn-store-rewards--desk-1.jpg"
-                           alt="Good For Nothing Clothing Ltd. Campaign / Winter Shutdown / 2020 / Branding / Web Design / Layout / Concept"
-                           loading="lazy"
-                           width="1600"
-                           height="900"
-                          >
-                        </div>
-                      </div>
-
-                    </div>
-
-                    <div class="parallax-content--img--text-container grid-col-1-3 grid-row-2">
-                      <div class="span-text-flex--inline-start grid-col-1-3 grid-row-1">
-                        <span class="span-text-flex--inline-start flex-start gap-none--important">
-                          <h3 class="line-height--standard-caps uppercase line-height--standard-caps md:text-sm">GOODFORNOTHING</h3>
-                          <sup class="text-sup line-height--standard-caps uppercase">Ⓡ</sup>
-                        </span>
-                      </div>
-                      <div class="span-text-flex--inline-start flex-end grid-col-1-3 grid-row-1">
-                        <span class="line-height--standard-caps uppercase md:text-sm">/</span>
-                        <p class="line-height--standard-caps md:text-sm">Shopify UI Design</p>
-                          <span class="line-height--standard-caps uppercase md:text-sm">/</span>
-                          <p class="line-height--standard-caps md:text-sm">E-commerce Theme</p>
-                      </div>
-                    </div>
-
-                  </div>
-
                   <!-- test section scroll 3 -->
                   <div class="lgbgbb:grid-auto-rows--auto-min-content hfit lgbt:100vh bg-color--primary sticky grid pb-header-height--minus-1rem grid-auto-cols--minmax grid-auto-rows--minmax gap-one md:grid-col-1-5 lg:grid-col-1-5 lgta:grid-col-1-5 md:pt-s md:top-0 lg:pt-s lg:top-0 lgbgb:pt-none lgbgb:top-base lg:mb-minus-s">
                     <div class="color-bg-grey--muted grid justify-items-center grid-auto-cols--minmax row-gap-s md:row-gap-m grid-col-1-3 lg:section--ui-padding lg:section--ui-column-gap">
@@ -815,7 +815,7 @@
                         <span class="line-height--standard-caps uppercase md:text-sm">/</span>
                         <p class="line-height--standard-caps md:text-sm">Shopify UI Design</p>
                           <span class="line-height--standard-caps uppercase md:text-sm">/</span>
-                          <p class="line-height--standard-caps md:text-sm">E-commerce Theme</p>
+                          <p class="line-height--standard-caps md:text-sm">Theme: E-commerce</p>
                       </div>
                     </div>
 
@@ -909,7 +909,7 @@
                         <span class="line-height--standard-caps uppercase md:text-sm">/</span>
                         <p class="line-height--standard-caps md:text-sm">Shopify UI Design</p>
                           <span class="line-height--standard-caps uppercase md:text-sm">/</span>
-                          <p class="line-height--standard-caps md:text-sm">Editorial Theme</p>
+                          <p class="line-height--standard-caps md:text-sm">Theme: Editorial</p>
                       </div>
                     </div>
 
@@ -1003,7 +1003,7 @@
                         <span class="line-height--standard-caps uppercase md:text-sm">/</span>
                         <p class="line-height--standard-caps md:text-sm">Shopify UI Design</p>
                           <span class="line-height--standard-caps uppercase md:text-sm">/</span>
-                          <p class="line-height--standard-caps md:text-sm">E-commerce Themme</p>
+                          <p class="line-height--standard-caps md:text-sm">Themme: E-commerce</p>
                       </div>
                     </div>
 
