--- a/index.html
+++ b/index.html
@@ -479,19 +479,6 @@
                       </button>
                     </div>
                     <ul class="splide__list">
-                      <li class="splide__slide" data-splide-html-video="assets/video/cdev-animation--gfn-hompage-hero-2.mp4">
-                        <div class="splide__slide__container">
-                          <img src="assets/images/cdev-hero-2.jpg" alt="Animation Hero Image / Animation Collection Page">
-                        </div>
-                        <a href="animation.html" title="Link to Animation collection">
-                          <svg class="contact-form--link--svg" width="17" height="18" viewBox="0 0 17 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M8 1.35156L16 9.35156L8 17.3516" stroke="inherit" stroke-miterlimit="10"/>
-                            <path d="M0 9.35156H16" stroke="inherit" stroke-miterlimit="10"/>
-                          </svg>
-                          <p class="splide--titles hide-on-mob">Explore: Animation Collection</p>
-                          <p class="splide--titles hide-on-desktop uppercase">Animation</p>
-                        </a>
-                      </li>
                       <li class="splide__slide" data-splide-html-video="assets/video/gfn--ui-homepage-mob--animate-2.mp4">
                         <div class="splide__slide__container">
                           <img src="assets/images/gfn--ui-homepage-hero--poster--1.jpg" alt="UI + Code Hero Image / UI + Code Collection Page">
@@ -503,6 +490,19 @@
                           </svg>
                           <p class="splide--titles hide-on-mob">Explore: UI / Code Collection</p>
                           <p class="splide--titles hide-on-desktop uppercase">UI / Code</p>
+                        </a>
+                      </li>
+                      <li class="splide__slide" data-splide-html-video="assets/video/cdev-animation--gfn-hompage-hero-2.mp4">
+                        <div class="splide__slide__container">
+                          <img src="assets/images/cdev-hero-2.jpg" alt="Animation Hero Image / Animation Collection Page">
+                        </div>
+                        <a href="animation.html" title="Link to Animation collection">
+                          <svg class="contact-form--link--svg" width="17" height="18" viewBox="0 0 17 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M8 1.35156L16 9.35156L8 17.3516" stroke="inherit" stroke-miterlimit="10"/>
+                            <path d="M0 9.35156H16" stroke="inherit" stroke-miterlimit="10"/>
+                          </svg>
+                          <p class="splide--titles hide-on-mob">Explore: Animation Collection</p>
+                          <p class="splide--titles hide-on-desktop uppercase">Animation</p>
                         </a>
                       </li>
                       <li class="splide__slide">
@@ -525,7 +525,7 @@
 
               <div id="sectionGraphic" class="graphic--container lg:grid-row-1 md:pb-s">
                 <!-- desktop about -->
-                <div class="intro-text-container grid gap-one position-relative height-fit align-self-start lg:pt-header-height g:pt-s z-index-2 lg:grid-row-1 mdt:grid-col-1-5 lgbt:grid-col-1-2 hide-on-mob--important">
+                <div class="intro-text-container grid gap-one position-relative height-fit align-self-start lg:pt-header-height g:pt-s z-index-2 hide-on-mob--important">
                   <p class="intro-text-desktop lg:grid-col-1-2 grid-row-1 pointer-events-visible">
                     Manchester-based multidisciplinary designer with a strong focus in digital, UI, and motion design. My skillset also includes a good foundation in HTML, CSS, JavaScript, and Shopify Liquid, as well as some experience and a keen interest in 3D software packages like Blender and Cinema 4D. Check out my portfolio or <a href="/cv.html" class="link--cv" title="Link to cv page cursor-pointer">CV / Résumé page.</a>
                   </p>
@@ -550,7 +550,7 @@
                   </a>
                 </div>
                 <!-- end of desktop about -->
-                <div id="logotype--svg-container" class="logotype--svg-container md:grid-col-1-2 md:mt-negative-s md:pt-0 md:pb-s height-fit lg:align-self-start lgmm:pb-header-height-minus-1rem">
+                <div id="logotype--svg-container" class="logotype--svg-container md:grid-col-1-2 md:pt-0 md:pb-s height-fit lg:align-self-start lgmm:pb-header-height-minus-1rem">
                   <div class="logotype--svg-inner">
                     <!-- mobile about -->
                     <div class="intro-text--container-mob">
