--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                 <div class="mobile-menu--cv">
                   <p class="border-bottom-unset">Say hello, let's work together.</p>
                   <p class="">
-                    Manchester-based multidisciplinary designer with a strong focus in digital, UI, and motion design. My skillset also includes a good foundation in HTML, CSS, JavaScript, and Shopify Liquid, as well as some experience and a keen interest in 3D software packages like Blender and Cinema 4D. Check out my portfolio.
+                    Manchester-based multidisciplinary designer with a strong focus in UI, digital, and motion design. My skillset also includes a good foundation in HTML, CSS, JavaScript, and Shopify Liquid, as well as some experience and a keen interest in 3D software packages like Blender and Cinema 4D. Check out my portfolio.
                   </p>
                   <a href="cv.html" class="accordion-content--link border-top--one-dashed--grey" title="Link to cv page">
                     <span class="uppercase">CV / RÉSUMÉ</span>
@@ -345,7 +345,7 @@
         <div class="contact-form--intro-container">
           <div class="contact-form--intro--text-container">
             <p class="contact-form--intro--p">Say hello, let's work together.</p>
-            <p class="contact-form--intro--p">Manchester-based multidisciplinary designer with a strong focus in digital, UI, and motion design. Check out my portfolio.</p>
+            <p class="contact-form--intro--p">Manchester-based multidisciplinary designer with a strong focus in UI, digital, and motion design. Check out my portfolio.</p>
           </div>
           <a href="cv.html" class="contact-form--intro--list-container border-bottom--one" title="Link to CV page">
             <div class="contact-form--intro--list">
@@ -436,7 +436,7 @@
             <section id="sectionContent" class="content-s">
               <div class="content--text-desktop">
                 <p class="intro-text-desktop">
-                  Manchester-based multidisciplinary designer with a strong focus in digital, UI, and motion design. My skillset also includes a good foundation in HTML, CSS, JavaScript, and Shopify Liquid, as well as some experience and a keen interest in 3D software packages like Blender and Cinema 4D. Check out my portfolio or <a href="/cv.html" class="link--cv" title="Link to cv page cursor-pointer">CV / Résumé page.</a>
+                  Manchester-based multidisciplinary designer with a strong focus in UI, digital, and motion design. My skillset also includes a good foundation in HTML, CSS, JavaScript, and Shopify Liquid, as well as some experience and a keen interest in 3D software packages like Blender and Cinema 4D. Check out my portfolio or <a href="/cv.html" class="link--cv" title="Link to cv page cursor-pointer">CV / Résumé page.</a>
                 </p>
                 <div class="intro-list--container-about">
                   <ul class="intro-list--row-1">
@@ -527,7 +527,7 @@
                 <!-- desktop about -->
                 <div class="intro-text-container grid gap-one position-relative height-fit align-self-start lg:pt-header-height g:pt-s z-index-2 hide-on-mob--important">
                   <p class="intro-text-desktop lg:grid-col-1-2 grid-row-1 pointer-events-visible">
-                    Manchester-based multidisciplinary designer with a strong focus in digital, UI, and motion design. My skillset also includes a good foundation in HTML, CSS, JavaScript, and Shopify Liquid, as well as some experience and a keen interest in 3D software packages like Blender and Cinema 4D. Check out my portfolio or <a href="/cv.html" class="link--cv" title="Link to cv page cursor-pointer">CV / Résumé page.</a>
+                    Manchester-based multidisciplinary designer with a strong focus in UI, digital, and motion design. My skillset also includes a good foundation in HTML, CSS, JavaScript, and Shopify Liquid, as well as some experience and a keen interest in 3D software packages like Blender and Cinema 4D. Check out my portfolio or <a href="/cv.html" class="link--cv" title="Link to cv page cursor-pointer">CV / Résumé page.</a>
                   </p>
                   <div class="intro-list--container lg:grid-col-1-2 grid-row-2 pointer-events-visible">
                     <ul class="intro-list--row-1">
@@ -555,7 +555,7 @@
                     <!-- mobile about -->
                     <div class="intro-text--container-mob">
                       <p class="intro-text-mob md:pt-s md:border-top--one">
-                        Manchester-based multidisciplinary designer with a strong focus in digital, UI, and motion design. My skillset also includes a good foundation in HTML, CSS, JavaScript, and Shopify Liquid, as well as some experience and a keen interest in 3D software packages like Blender and Cinema 4D. Check out my portfolio or <a href="/cv.html" class="link--cv" title="Link to cv page cursor-pointer">CV / Résumé page.</a>
+                        Manchester-based multidisciplinary designer with a strong focus in UI, digital, and motion design. My skillset also includes a good foundation in HTML, CSS, JavaScript, and Shopify Liquid, as well as some experience and a keen interest in 3D software packages like Blender and Cinema 4D. Check out my portfolio or <a href="/cv.html" class="link--cv" title="Link to cv page cursor-pointer">CV / Résumé page.</a>
                       </p>
                       <div class="intro-list--container-2">
                         <ul class="intro-list--row-1">
