--- a/animation.html
+++ b/animation.html
@@ -1252,7 +1252,6 @@
                 </div>
                 <!-- <a id="formTriggerThree" href="mailto:chris@chrisedwardsdesign.com?subject=Hello&body=Hi%20there!" class="cursor-pointer hide-on-desktop"> -->
                 <a id="formTriggerThree" class="cursor-pointer hide-on-desktop">
-
                   <ul class="cursor-pointer">
                     <li class="footer--info-li-color uppercase">Contact</li>
                     <li class="footer--info-link-color">chris@chrisedwardsdesign.com</li>
@@ -1260,7 +1259,8 @@
                 </a>
               </div>
               <div class="footer--col">
-                <a id="formTriggerThreeDesktop" href="mailto:chris@chrisedwardsdesign.com?subject=Hello&body=Hi%20there!" class="cursor-pointer hide-on-mob hide-on-desktop">
+                <!-- <a id="formTriggerThreeDesktop" href="mailto:chris@chrisedwardsdesign.com?subject=Hello&body=Hi%20there!" class="cursor-pointer hide-on-mob hide-on-desktop"> -->
+                <a id="formTriggerThreeDesktop" class="cursor-pointer hide-on-mob hide-on-desktop">
                   <ul>
                     <li class="footer--info-li-color uppercase">Contact</li>
                   </ul>
