--- a/cv.html
+++ b/cv.html
@@ -817,7 +817,8 @@
                 </a>
               </div>
               <div class="footer--col">
-                <a id="formTriggerThreeDesktop" href="mailto:chris@chrisedwardsdesign.com?subject=Hello&body=Hi%20there!" class="cursor-pointer hide-on-mob hide-on-desktop">
+                <!-- <a id="formTriggerThreeDesktop" href="mailto:chris@chrisedwardsdesign.com?subject=Hello&body=Hi%20there!" class="cursor-pointer hide-on-mob hide-on-desktop"> -->
+                <a id="formTriggerThreeDesktop" class="cursor-pointer hide-on-mob hide-on-desktop">
                   <ul>
                     <li class="footer--info-li-color uppercase">Contact</li>
                   </ul>
