--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
               <div id="sectionGraphic" class="graphic--container lg:grid-row-1 md:pb-s">
                 <!-- desktop about -->
                 <div class="intro-text-container grid gap-one position-relative height-fit align-self-start lg:pt-header-height g:pt-s z-index-2 hide-on-mob--important">
-                  <p class="intro-text-desktop lg:grid-col-1-2 grid-row-1 pointer-events-visible">
+                  <p class="intro-text-desktop font--intro lg:grid-col-1-2 grid-row-1 pointer-events-visible">
                     Manchester-based multidisciplinary designer with a strong focus in UI, digital, and motion design. My skillset also includes a good foundation in HTML, CSS, JavaScript, and Shopify Liquid, as well as some experience and a keen interest in 3D software packages like Blender and Cinema 4D. Check out my portfolio or <a href="/cv.html" class="link--cv" title="Link to cv page cursor-pointer">CV / Résumé page.</a>
                   </p>
                   <div class="intro-list--container lg:grid-col-1-2 grid-row-2 pointer-events-visible">
