--- a/cv.html
+++ b/cv.html
@@ -23,18 +23,18 @@
     <link rel="stylesheet" href="splide-extension-video-master/dist/css/splide-extension-video.min.css">
     <link rel="license" href="/license.txt">
     <!-- Preload important scripts -->
-    <!-- <link rel="preload" href="splide/dist/js/splide.min.js" as="script">
-    <link rel="preload" href="splide-extension-video-master/dist/js/splide-extension-video.min.js" as="script"> -->
+    <link rel="preload" href="splide/dist/js/splide.min.js" as="script">
+    <link rel="preload" href="splide-extension-video-master/dist/js/splide-extension-video.min.js" as="script">
     <!-- Defer loading non-essential scripts -->
-    <!-- <script async src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
-    <script src="main.js" type="module" defer></script> -->
+    <script async src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
+    <script src="main.js" type="module" defer></script>
     <!-- Defer loading essential scripts -->
-    <!-- <script src="splide/dist/js/splide.min.js" defer></script>
-    <script src="splide-extension-video-master/dist/js/splide-extension-video.min.js" defer></script> -->
+    <script src="splide/dist/js/splide.min.js" defer></script>
+    <script src="splide-extension-video-master/dist/js/splide-extension-video.min.js" defer></script>
   </head>
-  <body class="dark-mode fixed">
+  <body class="dark-mode">
 
-    <div class="site--maintenance-container display-flex fixed height-100vh w100">
+    <div class="site--maintenance-container display-flex fixed height-100vh w100 none">
       <div class="site--maintenance--message grid justify-content-center align-items-center height-100 w100 gap-one">
         <div class="w100 hfit grid-col-1 site--maintenance--text-color">
           <h1 class="uppercase">Chris Edwards</h1>
@@ -94,7 +94,7 @@
         <h1 class="nav--logotype uppercase">CV RÉSUMÉ</h1>
       </div>
     </div>
-    <header id="header--container none">
+    <header id="header--container">
       <!-- desktop menu -->
       <!-- nav logo -->
       <nav id="navBar" aria-label="Desktop navigation menu" class="container--nav md:grid-auto-cols--minmax md:grid-cols--unset lgbgb:grid-auto-cols--minmax lgbgb:grid-cols--unset">
@@ -466,7 +466,7 @@
         <p class="credits-details">© Copyright 2023, Chris Edwards Design</p>
       </div>
     </section>
-    <div id="page-wrapper" class="page-wrapper none">
+    <div id="page-wrapper" class="page-wrapper">
       <main class="main--wrapper">
           <div id="innerWrapper" class="inner-wrapper">
             
