--- a/design.html
+++ b/design.html
@@ -544,80 +544,10 @@
                   </ul>
                 </div>
 
-                <div class="parallax-content--img--container md:row-gap-none md:grid-col-1-5 mdt:grid-col-1-9 lgm:grid-col-1-9 lgb:grid-col-3-9 lgbgb:grid-col-3-9">
-                
-                  <!-- video 1 -->
-                  <div class="none bg-color--primary sticky grid pb-header-height--minus-1rem grid-auto-cols--minmax grid-auto-rows--minmax gap-one md:grid-col-1-5 lg:grid-col-1-5 lgta:grid-col-1-3 md:pt-s md:top-0 lg:pt-s lg:top-0">
-                    <div class="container--video grid-col-1-3 grid-row-1" data-video="1">
-                      <video class="video video-content lg:aspect-ratio-16-9 md:aspect-ratio-16-9 cursor-pointer" loop autoplay muted playsinline>
-                        <source class="hero-video--main" src="assets/video/GFN_BLACK-FRIDAY_FULL-SIZE-WEBPAGE_SHOPIFY.mp4" type="video/mp4">
-                        <source class="hero-video--main" src="assets/video/test-video.webm" type="video/webm">
-                      </video>
-                      <img class="thumbnail video-hero-thumbnail lg:aspect-ratio-16-9 md:aspect-ratio-16-9 cursor-pointer" src="assets/images/text.jpg" alt="Video Thumbnail" loading="lazy">
-                      <div class="play-button play-button--color-alt uppercase">
-                        <svg width="9" height="17" viewBox="0 0 9 17" fill="inherit" xmlns="http://www.w3.org/2000/svg">
-                          <path d="M0.0415039 0.351562L8.0415 8.35156L0.0415039 16.3516" fill="inherit"/>
-                        </svg>
-                        <span class="text-container">
-                          <span class="old-text">Play</span>
-                          <span class="new-text">Play</span>
-                        </span>
-                      </div>
-                      <div class="container--video--overlay"></div>
-                    </div>
-                    <div class="parallax-content--img--text-container grid-col-1-3 grid-row-2">
-                      <div class="span-text-flex--inline-start grid-col-1-3 grid-row-1">
-                        <span class="span-text-flex--inline-start flex-start gap-none--important">
-                          <h3 class="line-height--standard-caps uppercase line-height--standard-caps md:text-sm">GOODFORNOTHING</h3>
-                          <sup class="text-sup line-height--standard-caps">Ⓡ</sup>
-                        </span>
-                      </div>
-                      <div class="span-text-flex--inline-start flex-end grid-col-2-3 grid-row-1">
-                        <span class="line-height--standard-caps">/</span>
-                        <span class="">
-                          <p class="line-height--standard-caps">VIP ACCESS</p>
-                        </span>
-                      </div>
-                    </div>
-                  </div>
+                <div class="parallax-content--img--container md:grid-col-1-5 mdt:grid-col-1-9 lgm:grid-col-1-9 lgb:grid-col-3-9 lgbgb:grid-col-3-9">
 
-                  <!-- video 2 -->
-                  <div class="none bg-color--primary sticky grid pb-header-height--minus-1rem mdta:pt-s grid-auto-cols--minmax grid-auto-rows--minmax gap-one md:grid-col-1-5 lg:grid-col-1-5 lgta:grid-col-3-5 md:pt-s md:top-0 lg:pt-s lg:top-0">
-                    <div class="container--video grid-col-1-3 grid-row-1" data-video="1">
-                      <video class="video video-content lg:aspect-ratio-16-9 md:aspect-ratio-16-9 cursor-pointer" loop autoplay muted playsinline>
-                        <source class="hero-video--main" src="assets/video/GFN_BLACK-FRIDAY_FULL-SIZE-WEBPAGE_SHOPIFY.mp4" type="video/mp4">
-                        <source class="hero-video--main" src="assets/video/test-video.webm" type="video/webm">
-                      </video>
-                      <img class="thumbnail video-hero-thumbnail lg:aspect-ratio-16-9 md:aspect-ratio-16-9 cursor-pointer" src="assets/images/text.jpg" alt="Video Thumbnail" loading="lazy">
-                      <div class="play-button play-button--color-alt uppercase">
-                        <svg width="9" height="17" viewBox="0 0 9 17" fill="inherit" xmlns="http://www.w3.org/2000/svg">
-                          <path d="M0.0415039 0.351562L8.0415 8.35156L0.0415039 16.3516" fill="inherit"/>
-                        </svg>
-                        <span class="text-container">
-                          <span class="old-text">Play</span>
-                          <span class="new-text">Play</span>
-                        </span>
-                      </div>
-                      <div class="container--video--overlay"></div>
-                    </div>
-                    <div class="parallax-content--img--text-container grid-col-1-3 grid-row-2">
-                      <div class="span-text-flex--inline-start grid-col-1-3 grid-row-1">
-                        <span class="span-text-flex--inline-start flex-start gap-none--important">
-                          <h3 class="line-height--standard-caps uppercase line-height--standard-caps md:text-sm">GOODFORNOTHING</h3>
-                          <sup class="text-sup line-height--standard-caps">Ⓡ</sup>
-                        </span>
-                      </div>
-                      <div class="span-text-flex--inline-start flex-end grid-col-2-3 grid-row-1">
-                        <span class="line-height--standard-caps">/</span>
-                        <span class="">
-                          <p class="line-height--standard-caps">VIP ACCESS</p>
-                        </span>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="parallax--img--container pb-header-height--minus-1rem pb-header-height md:grid-col-1-5 lg:grid-col-1-5">
-                    <div class="parallax--img--holder grid-col-1-3 splide-design pt-s">
+                  <div class="relative parallax--img--container pb-header-height--minus-1rem pb-header-height md:grid-col-1-5 lg:grid-col-1-5">
+                    <div class="relative parallax--img--holder grid-col-1-3 splide-design">
                       <!-- splide -->
                       <div class="splide">
                         <div class="splide__track grid-col-1-4 md:grid-col-1-3 grid-row-1">
@@ -683,8 +613,8 @@
                     </div>
                   </div>
 
-                  <div class="parallax--img--container pb-header-height--minus-1rem pt-s pb-header-height md:grid-col-1-5 lg:grid-col-1-5 lg:mb-minus-s lgm:height-100vh lgbg:height-fit">
-                    <div class="parallax--img--holder grid-col-1-3">
+                  <div class="relative parallax--img--container pb-header-height--minus-1rem pb-header-height md:grid-col-1-5 lg:grid-col-1-5">
+                    <div class="relative parallax--img--holder grid-col-1-3">
                       <img id=""
                           class="parallax--img-16-9 md:aspect-ratio-16-9 grid-col-1-3 color-bg-grey--muted-3 hide-on-mob"
                           srcset="assets/images/gfn-homepage---mockup-new-2.png 640w, 
@@ -732,8 +662,8 @@
                   </div>
 
                   <!-- double content -->
-                  <div class="parallax--img--container pb-header-height--minus-1rem md:grid-col-1-5 lg:grid-col-1-5 lg:mb-minus-s lgm:height-100vh">
-                    <div class="parallax--img--container pt-s">
+                  <div class="relative parallax--img--container pb-header-height--minus-1rem md:grid-col-1-5 lg:grid-col-1-5">
+                    <div class="relative parallax--img--container">
                       <div class="parallax--img--holder grid-col-1-5">
                         <img id=""
                             class="parallax--img-4-5 grid-col-1-3"
@@ -800,8 +730,8 @@
                     </div>
                   </div>
 
-                  <div class="parallax--img--container pb-header-height--minus-1rem pt-s pb-header-height md:grid-col-1-5 lg:grid-col-1-5 lg:mb-minus-s lgm:height-100vh lgbg:height-fit">
-                    <div class="parallax--img--holder grid-col-1-3">
+                  <div class="relative parallax--img--container pb-header-height--minus-1rem pb-header-height md:grid-col-1-5 lg:grid-col-1-5">
+                    <div class="relative parallax--img--holder grid-col-1-3">
                       <img id=""
                           class="parallax--img-16-9 md:aspect-ratio-16-9 grid-col-1-3 color-bg-grey--muted-3 hide-on-mob"
                           srcset="assets/images/gfn-black-friday-concept--desk-1.png 640w, 
@@ -851,8 +781,8 @@
                   </div>
 
                   <!-- double content -->
-                  <div class="parallax--img--container pb-header-height--minus-1rem md:grid-col-1-5 lg:grid-col-1-5 lg:mb-minus-s lgbg:height-fit">
-                    <div class="parallax--img--container pt-s">
+                  <div class="relative parallax--img--container pb-header-height--minus-1rem md:grid-col-1-5 lg:grid-col-1-5">
+                    <div class="relative parallax--img--container">
                       <div class="parallax--img--holder grid-col-1-5">
                         <img id=""
                             class="parallax--img-4-5 grid-col-1-3 aspect-ratio-1-1"
@@ -919,8 +849,8 @@
                     </div>
                   </div>
 
-                  <div class="parallax--img--container pb-header-height--minus-1rem pt-s pb-header-height md:grid-col-1-5 lg:grid-col-1-5 lg:mb-minus-s lgm:height-100vh lgbg:height-fit">
-                    <div class="parallax--img--holder grid-col-1-3">
+                  <div class="relative parallax--img--container pb-header-height--minus-1rem pb-header-height md:grid-col-1-5 lg:grid-col-1-5">
+                    <div class="relative parallax--img--holder grid-col-1-3">
                       <img id=""
                           class="parallax--img-16-9 md:aspect-ratio-16-9 grid-col-1-3 color-bg-grey--muted-3 hide-on-mob"
                           srcset="assets/images/Joy-Banners-Porfolio-desk-3.png 640w, 
@@ -967,8 +897,8 @@
                     </div>
                   </div>
 
-                  <div class="parallax--img--container pb-header-height--minus-1rem pt-s pb-header-height md:grid-col-1-5 lg:grid-col-1-5 lg:mb-minus-s lgm:height-100vh lgbg:height-fit">
-                    <div class="parallax--img--holder grid-col-1-3">
+                  <div class="relative parallax--img--container pb-header-height--minus-1rem pb-header-height md:grid-col-1-5 lg:grid-col-1-5">
+                    <div class="relative parallax--img--holder grid-col-1-3">
                       <img id=""
                           class="parallax--img-16-9 grid-col-1-3"
                           srcset="assets/images/beyond-90.jpg 640w, 
@@ -1001,7 +931,7 @@
                     </div>
                   </div>
 
-                  <div class="none parallax--img--container pb-header-height--minus-1rem pt-s pb-header-height md:grid-col-1-5 lg:grid-col-1-5 lg:mb-minus-s lgm:height-100vh lgbg:height-fit">
+                  <div class="none relative parallax--img--container pb-header-height--minus-1rem pb-header-height md:grid-col-1-5 lg:grid-col-1-5">
                     <div class="parallax--img--holder grid-col-1-5">
                       <img id=""
                       class="parallax--img-4-5 grid-col-1-3"
@@ -1067,8 +997,8 @@
                     </div>
                   </div>
 
-                  <div class="none parallax--img--container pb-header-height--minus-1rem pt-s pb-header-height md:grid-col-1-5 lg:grid-col-1-5 lg:mb-minus-s lgbg:height-fit">
-                    <div class="parallax--img--holder grid-col-1-3">
+                  <div class="none relative parallax--img--container pb-header-height--minus-1rem pb-header-height md:grid-col-1-5 lg:grid-col-1-5">
+                    <div class="relative parallax--img--holder grid-col-1-3">
                       <img id=""
                           class="parallax--img-16-9 md:aspect-ratio-16-9 grid-col-1-3 color-bg-grey--muted-3 hide-on-mob"
                           srcset="assets/images/ground-control-cards-01.jpg 640w, 
@@ -1115,7 +1045,7 @@
                     </div>
                   </div>
 
-                  <div class="parallax--img--container pb-header-height--minus-1rem pt-s pb-header-height md:grid-col-1-5 lg:grid-col-1-5 lg:mb-minus-s lgbg:height-fit">
+                  <div class="relative parallax--img--container pb-header-height--minus-1rem pb-header-height md:grid-col-1-5 lg:grid-col-1-5">
                     <div class="parallax--img--holder grid-col-1-5">
                       <img id=""
                           class="parallax--img-4-5 grid-col-1-3 grid-row-1-3"
@@ -1177,8 +1107,8 @@
                     </div>
                   </div>
 
-                  <div class="parallax--img--container top-base pt-s md:grid-col-1-5 lg:grid-col-1-5 lg:mb-minus-s lgm:height-100vh lgbg:height-fit pb-header-height--minus-1rem ">
-                    <div class="parallax--img--holder grid-col-1-3">
+                  <div class="relative parallax--img--container md:grid-col-1-5 lg:grid-col-1-5 pb-header-height--minus-1rem">
+                    <div class="relative parallax--img--holder grid-col-1-3">
                       <img id=""
                           class="parallax--img-16-9 grid-col-1-3"
                           srcset="assets/images/parklife-01.jpg 640w, 
@@ -1216,7 +1146,7 @@
           <!-- end of paralax-->
 
           </div>
-          <footer id="footer--container" class="footer--container">
+          <footer id="footer--container" class="lg:relative footer--container lg:footer--height-header">
             <div class="footer--content">
               <div class="footer--col">
                 <div class="cursor-pointer hide-on-mob">
