--- a/ui-code.html
+++ b/ui-code.html
@@ -107,10 +107,13 @@
           </a>
         </div>
         <ul class="nav--links-left--desk lg:grid-col-3-5 lgb:grid-col-2-4 lgbg:grid-col-3-5">
-          <li>
+          <li class="display-flex flex-row gap-s">
             <a href="ui-code.html" title="Link to ux-code collection page">
-              <h2 class="nav--link cursor-pointer">UI / CODE</h2>
+              <h2 class="nav--link cursor-pointer">UI + CODE</h2>
             </a>
+            <!-- <a href="ui-code.html" title="Link to ux-code collection page">
+              <h2 class="nav--link cursor-pointer">UI / CODE</h2>
+            </a> -->
           </li>
           <li>
             <a href="animation.html" title="Link to animation collection page">
@@ -542,9 +545,9 @@
                   </ul>
                 </div>
 
-                <div class="parallax-content--img--container md:row-gap-none md:grid-col-1-5 mdt:grid-col-1-9 lgm:grid-col-1-9 lgb:grid-col-3-9 lgbgb:grid-col-3-9">
+                <div class="parallax-content--img--container md:grid-col-1-5 mdt:grid-col-1-9 lgm:grid-col-1-9 lgb:grid-col-3-9 lgbgb:grid-col-3-9">
 
-                  <div class="parallax--img--container pb-header-height--minus-1rem pt-s pb-header-height md:grid-col-1-5 lg:grid-col-1-5 lg:mb-minus-s lgbt:height-100vh lgbg:height-fit">
+                  <div class="relative parallax--img--container pb-header-height--minus-1rem pb-header-height md:grid-col-1-5 lg:grid-col-1-5">
                     <div class="parallax--img--holder grid-col-1-3">
                       <img id=""
                           class="parallax--img-16-9 md:aspect-ratio-16-9 grid-col-1-3 color-bg-grey--muted-3 hide-on-mob"
@@ -592,7 +595,7 @@
                   </div>
 
                   <!-- test section scroll 2 -->
-                  <div class="lgbgbb:grid-auto-rows--auto-min-content hfit lgbt:100vh bg-color--primary sticky grid pb-header-height--minus-1rem grid-auto-cols--minmax grid-auto-rows--minmax gap-one md:grid-col-1-5 lg:grid-col-1-5 lgta:grid-col-1-5 md:pt-s md:top-0 lg:pt-s lg:top-0 lgbgb:pt-none lgbgb:top-base lg:mb-minus-s">
+                  <div class="relative lgbgbb:grid-auto-rows--auto-min-content hfit bg-color--primary grid pb-header-height--minus-1rem grid-auto-cols--minmax grid-auto-rows--minmax gap-one md:grid-col-1-5 lg:grid-col-1-5 lgta:grid-col-1-5">
                     <div class="color-bg-grey--muted grid justify-items-center grid-auto-cols--minmax row-gap-s md:row-gap-m grid-col-1-3 lg:section--ui-padding lg:section--ui-column-gap">
 
                       <div class="display-flex flex-column md:grid-col-1-2 md:grid-row-1 lg:grid-col-1-2 lg:grid-row-1 w100 h100 md:pt-m md:pr-m md:pl-m md:pb-m overflow-hiden" data-video="4">
@@ -687,7 +690,7 @@
                   </div>
 
                   <!-- test section scroll 1 -->
-                  <div class="lgbgbb:grid-auto-rows--auto-min-content hfit lgbt:100vh bg-color--primary sticky grid pb-header-height--minus-1rem grid-auto-cols--minmax grid-auto-rows--minmax gap-one md:grid-col-1-5 lg:grid-col-1-5 lgta:grid-col-1-5 md:pt-s md:top-0 lg:pt-s lg:top-0 lgbgb:pt-none lgbgb:top-base lg:mb-minus-s">
+                  <div class="relative lgbgbb:grid-auto-rows--auto-min-content hfit bg-color--primary grid pb-header-height--minus-1rem grid-auto-cols--minmax grid-auto-rows--minmax gap-one md:grid-col-1-5 lg:grid-col-1-5 lgta:grid-col-1-5">
                     <div class="color-bg-grey--muted grid justify-items-center grid-auto-cols--minmax row-gap-s md:row-gap-m grid-col-1-3 lg:section--ui-padding lg:section--ui-column-gap">
 
                       <div class="display-flex flex-column md:grid-col-1-2 md:grid-row-1 lg:grid-col-1-2 lg:grid-row-1 w100 h100 md:pt-m md:pr-m md:pl-m md:pb-m overflow-hiden">
@@ -782,7 +785,7 @@
                   </div>
 
                   <!-- test section scroll 3 -->
-                  <div class="lgbgbb:grid-auto-rows--auto-min-content hfit lgbt:100vh bg-color--primary sticky grid pb-header-height--minus-1rem grid-auto-cols--minmax grid-auto-rows--minmax gap-one md:grid-col-1-5 lg:grid-col-1-5 lgta:grid-col-1-5 md:pt-s md:top-0 lg:pt-s lg:top-0 lgbgb:pt-none lgbgb:top-base lg:mb-minus-s">
+                  <div class="relative lgbgbb:grid-auto-rows--auto-min-content hfit bg-color--primary sticky grid pb-header-height--minus-1rem grid-auto-cols--minmax grid-auto-rows--minmax gap-one md:grid-col-1-5 lg:grid-col-1-5 lgta:grid-col-1-5">
                     <div class="color-bg-grey--muted grid justify-items-center grid-auto-cols--minmax row-gap-s md:row-gap-m grid-col-1-3 lg:section--ui-padding lg:section--ui-column-gap">
 
                       <div class="display-flex flex-column md:grid-col-1-2 md:grid-row-1 lg:grid-col-1-2 lg:grid-row-1 w100 h100 md:pt-m md:pr-m md:pl-m md:pb-m overflow-hiden">
@@ -876,7 +879,7 @@
                   </div>
 
                   <!-- test section scroll 4 -->
-                  <div class="lgbgbb:grid-auto-rows--auto-min-content hfit lgbt:100vh bg-color--primary sticky grid pb-header-height--minus-1rem grid-auto-cols--minmax grid-auto-rows--minmax gap-one md:grid-col-1-5 lg:grid-col-1-5 lgta:grid-col-1-5 md:pt-s md:top-0 lg:pt-s lg:top-0 lgbgb:pt-none lgbgb:top-base lg:mb-minus-s">
+                  <div class="relative lgbgbb:grid-auto-rows--auto-min-content hfit bg-color--primary sticky grid pb-header-height--minus-1rem grid-auto-cols--minmax grid-auto-rows--minmax gap-one md:grid-col-1-5 lg:grid-col-1-5 lgta:grid-col-1-5">
                     <div class="color-bg-grey--muted grid justify-items-center grid-auto-cols--minmax row-gap-s md:row-gap-m grid-col-1-3 lg:section--ui-padding lg:section--ui-column-gap">
 
                       <div class="display-flex flex-column md:grid-col-1-2 md:grid-row-1 lg:grid-col-1-2 lg:grid-row-1 w100 h100 md:pt-m md:pr-m md:pl-m md:pb-m overflow-hiden">
@@ -970,7 +973,7 @@
                   </div>
 
                   <!-- test section scroll 5 -->
-                  <div class="lgbgbb:grid-auto-rows--auto-min-content hfit lgbt:100vh bg-color--primary sticky grid pb-header-height--minus-1rem grid-auto-cols--minmax grid-auto-rows--minmax gap-one md:grid-col-1-5 lg:grid-col-1-5 lgta:grid-col-1-5 md:pt-s md:top-0 lg:pt-s lg:top-0 lgbgb:pt-none lgbgb:top-base lg:mb-minus-s">
+                  <div class="relative lgbgbb:grid-auto-rows--auto-min-content hfit bg-color--primary grid pb-header-height--minus-1rem grid-auto-cols--minmax grid-auto-rows--minmax gap-one md:grid-col-1-5 lg:grid-col-1-5 lgta:grid-col-1-5">
                     <div class="color-bg-grey--muted grid justify-items-center grid-auto-cols--minmax row-gap-s md:row-gap-m grid-col-1-3 lg:section--ui-padding lg:section--ui-column-gap">
 
                       <div class="display-flex flex-column md:grid-col-1-2 md:grid-row-1 lg:grid-col-1-2 lg:grid-row-1 w100 h100 md:pt-m md:pr-m md:pl-m md:pb-m overflow-hiden">
@@ -1069,7 +1072,7 @@
           <!-- end of paralax-->
 
           </div>
-          <footer id="footer--container" class="footer--container">
+          <footer id="footer--container" class="lg:relative footer--container lg:footer--height-header">
             <div class="footer--content">
               <div class="footer--col">
                 <div class="cursor-pointer hide-on-mob">
