--- a/cv.html
+++ b/cv.html
@@ -513,14 +513,6 @@
               <div class="cv-section--container">
                 <div class="cv-content lg:pt-s lg:border-top--one">
 
-                  <!-- <div class="parallax--cv-header--container top-base hide-on-mob none">
-                    <div class="cv-title">
-                      <h3 class="uppercase">CV</h3>
-                      <span class="uppercase">/</span>
-                      <h3 class="uppercase">RÉSUMÉ</h3>
-                    </div>
-                  </div> -->
-
                   <div class="parallax--cv-sub-header--container top-base grid-row-1 md:pt-s md:border-top--one hide-on-desktop">
                     <div class="cv-title">
                       <span class="cv-header uppercase hide-on-mob line-height--caps">/</span>
@@ -542,14 +534,14 @@
                     </div>
                   </div>
 
-                  <div class="parallax--cv-sub-header--container lg:top-base lg:pb-header-height--plus-1rem md:pt-s">
+                  <div class="md:relative parallax--cv-sub-header--container lg:top-base lg:pb-header-height--plus-1rem md:pt-s">
                     <div class="cv-title md:pt-s md:border-top--one">
                       <span class="cv-header uppercase hide-on-mob md:text-xl lg:text-2xl lgmm:text-2xl line-height--caps none">/</span>
                       <h3 class="cv-header uppercase wfit md:text-xl lg:text-2xl lgmm:text-2xl line-height--caps">Experience</h3>
                     </div>
                   </div>
 
-                  <div class="parallax--cv-experience--container lgbgb:grid-col-3-5 md:pt-s pb-s">
+                  <div class="md:relative  parallax--cv-experience--container lgbgb:grid-col-3-5 md:pt-s pb-s">
                     <div class="cv-experience--container">
                       <div class="cv-title--container">
                         <div class="cv-title">
@@ -569,7 +561,7 @@
                     </div>
                   </div>
 
-                  <div class="parallax--cv-experience--container lgbgb:grid-col-3-5 pt-s pb-s">   
+                  <div class="md:relative  parallax--cv-experience--container lgbgb:grid-col-3-5 pt-s pb-s">   
                     <div class="cv-experience--container">
                       <div class="cv-title--container">
                         <div class="cv-title">
@@ -589,7 +581,7 @@
                     </div>
                   </div>
 
-                  <div class="parallax--cv-experience--container lgbgb:grid-col-3-5 pt-s pb-s">   
+                  <div class="md:relative  parallax--cv-experience--container lgbgb:grid-col-3-5 pt-s pb-s">   
                     <div class="cv-experience--container">
                       <div class="cv-title--container">
                         <div class="cv-title">
@@ -609,7 +601,7 @@
                     </div>
                   </div>
 
-                  <div class="parallax--cv-experience--container lgbgb:grid-col-3-5 pt-s pb-s">   
+                  <div class="md:relative parallax--cv-experience--container lgbgb:grid-col-3-5 pt-s pb-s">   
                     <div class="cv-experience--container">
                       <div class="cv-title--container">
                         <div class="cv-title">
@@ -629,7 +621,7 @@
                     </div>
                   </div>
 
-                  <div class="parallax--cv-experience--container lgbgb:grid-col-3-5 pt-s pb-s">   
+                  <div class="md:relative parallax--cv-experience--container lgbgb:grid-col-3-5 pt-s pb-s">   
                     <div class="cv-experience--container">
                       <div class="cv-title--container">
                         <div class="cv-title">
@@ -649,7 +641,7 @@
                     </div>
                   </div>
 
-                  <div class="parallax--cv-experience--container lgbgb:grid-col-3-5 pt-s pb-s">   
+                  <div class="md:relative parallax--cv-experience--container lgbgb:grid-col-3-5 pt-s pb-s">   
                     <div class="cv-experience--container">
                       <div class="cv-title--container">
                         <div class="cv-title">
@@ -669,7 +661,7 @@
                     </div>
                   </div>
 
-                  <div class="parallax--cv-experience--container lgbgb:grid-col-3-5 pt-s pb-header-height--plus-1rem">   
+                  <div class="md:relative parallax--cv-experience--container lgbgb:grid-col-3-5 pt-s pb-header-height--plus-1rem">   
                     <div class="cv-experience--container">
                       <div class="cv-title--container">
                         <div class="cv-title">
@@ -854,7 +846,7 @@
           <!-- end of CV-->
 
           </div>
-          <footer id="footer--container" class="footer--container">
+          <footer id="footer--container" class="lg:relative footer--container lg:footer--height-header">
             <div class="footer--content">
               <div class="footer--col">
                 <div class="cursor-pointer hide-on-mob">
