--- a/design.html
+++ b/design.html
@@ -809,7 +809,7 @@
                             <span class="line-height--standard-caps hide-on-mob hide-on-desktop">/</span>
                             <span class="">
                               <p class="line-height--standard-caps hide-on-mob md:text-sm none">Creative</p>
-                              <p class="line-height--standard-caps hide-on-desktop md:text-sm">Apparel Logotype</p>
+                              <p class="line-height--standard-caps md:text-sm md:flex lg:none lgta:flex">Apparel Logotype</p>
                             </span>
                           </div>
                         </div>
@@ -830,18 +830,20 @@
                             width="400"
                             height="500"
                         >
+                        
+
                         <div class="parallax-content--img--text-container grid-col-1-3">
                           <div class="span-text-flex--inline-start lg:grid-col-1-4 lg:grid-row-1 md:grid-col-1-4 md:grid-row-1">
                             <span class="display-flex flex-row wfit">
-                              <h3 class="line-height--standard-caps uppercase line-height--standard-caps md:text-sm none">GOODFORNOTHING</h3>
-                              <sup class="text-sup line-height--standard-caps none">Ⓡ</sup>
+                              <h3 class="line-height--standard-caps uppercase line-height--standard-caps md:text-sm hide-on-desktop">GOODFORNOTHING</h3>
+                              <sup class="text-sup line-height--standard-caps hide-on-desktop">Ⓡ</sup>
                             </span>
                           </div>
                           <div class="span-text-flex--inline-start md:flex-start lg:flex-end lg:grid-col-3-4 lg:grid-row-1 md:grid-col-1-4 md:grid-row-2">
-                            <span class="line-height--standard-caps hide-on-mob">/</span>
+                            <span class="line-height--standard-caps hide-on-mob hide-on-desktop">/</span>
                             <span class="">
-                              <p class="line-height--standard-caps hide-on-mob">Summer Sale</p>
-                              <p class="line-height--standard-caps hide-on-desktop md:text-sm">Summer Sale</p>
+                              <p class="line-height--standard-caps hide-on-mob md:text-sm none">Summer Sale</p>
+                              <p class="line-height--standard-caps md:text-sm">Digital Ads</p>
                             </span>
                           </div>
                         </div>
