--- a/animation.html
+++ b/animation.html
@@ -735,14 +735,14 @@
                         </div>
                         <div class="container--video--overlay"></div>
                       </div>
-                      <div class="parallax-content--img--text-container grid-col-1-3 grid-row-2 lgma:gap-xs">
+                      <div class="parallax-content--img--text-container grid-col-1-3 grid-row-2">
                         <div class="span-text-flex--inline-start grid-col-1-3 grid-row-1">
                           <span class="span-text-flex--inline-start flex-start gap-none--important">
-                            <h3 class="line-height--standard-caps uppercase line-height--standard-caps md:text-sm">Goodfornothing</h3>
+                            <h3 class="line-height--standard-caps uppercase line-height--standard-caps md:text-sm">GOODFORNOTHING</h3>
                             <sup class="text-sup line-height--standard-caps uppercase">Ⓡ</sup>
                           </span>
                         </div>
-                        <div class="span-text-flex--inline-start flex-end grid-col-1-3 grid-row-1 lgma:justify-content-start lgma:grid-row-2">
+                        <div class="span-text-flex--inline-start flex-end grid-col-1-3 grid-row-1">
                           <span class="line-height--standard-caps uppercase md:text-sm">/</span>
                           <span class="">
                             <p class="line-height--standard-caps md:text-sm">IG Story: Solar Countdoown</p>
