--- a/cv.html
+++ b/cv.html
@@ -534,7 +534,7 @@
                     </div>
                   </div>
 
-                  <div class="md:relative parallax--cv-sub-header--container lg:top-base lg:pb-header-height--plus-1rem md:pt-s">
+                  <div class="parallax--cv-sub-header--container lg:top-base lg:pb-header-height--plus-1rem md:pt-s">
                     <div class="cv-title md:pt-s md:border-top--one">
                       <span class="cv-header uppercase hide-on-mob md:text-xl lg:text-2xl lgmm:text-2xl line-height--caps none">/</span>
                       <h3 class="cv-header uppercase wfit md:text-xl lg:text-2xl lgmm:text-2xl line-height--caps">Experience</h3>
